--- a/styles/animations.css
+++ b/styles/animations.css
@@ -26,8 +26,13 @@
   fill: var(--contour-color);
 }
 
-.like-icon .core      { transition-delay: 0.03s; }
-.like-icon .main-body { transition-delay: 0s; }
+.like-icon .core { 
+    transition-delay: 0.03s; 
+}
+
+.like-icon .main-body { 
+    transition-delay: 0s; 
+}
 
 .like-icon:active .core {
   transition-delay: 0s;
@@ -54,9 +59,13 @@
   fill: var(--animation-fill-color);
 }
 
-.like-icon.is-liked .heart { animation: scale-heart 0.3s 0.1s ease-in; }
+.like-icon.is-liked .heart { 
+    animation: scale-heart 0.3s 0.1s ease-in;
+}
 
-.like-icon.is-liked .sparks { animation: sparks-opacity 0.3s 0.3s ease-in; }
+.like-icon.is-liked .sparks { 
+    animation: sparks-opacity 0.3s 0.3s ease-in;
+}
 
 .like-icon .contour {
   transition: fill 0.1s linear;
