--- a/styles/style.css
+++ b/styles/style.css
@@ -72,11 +72,12 @@
   position: relative;
 }
 
-.image-naivety { 
-  filter: blur(0.8px) saturate(1.3) hue-rotate(20deg) contrast(0.8) brightness(1.4);
+.image-naivety {
+  filter: blur(0.8px) saturate(1.3) hue-rotate(20deg) contrast(0.8)
+    brightness(1.4);
 }
 
-.image-clean-slate { 
+.image-clean-slate {
   filter: blur(0.8px) hue-rotate(-40deg) saturate(0.8) brightness(1.1);
 }
 
@@ -84,11 +85,11 @@
   filter: invert(0.15) contrast(1.8) brightness(0.7) saturate(1.4);
 }
 
-.image-one-more { 
+.image-one-more {
   filter: contrast(1.6) saturate(0.9) brightness(1.05) hue-rotate(320deg);
 }
 
-.image-shock { 
+.image-shock {
   filter: brightness(1.1) sepia(0.3) hue-rotate(350deg) contrast(1.05);
 }
 
@@ -126,15 +127,15 @@
   font-size: 14px;
   color: var(--text-color);
   mix-blend-mode: hard-light;
-  text-shadow:
-    -1px 0 var(--bg-color),
-     0 1px var(--bg-color),
-     1px 0 var(--bg-color),
-     0 -1px var(--bg-color);
+  text-shadow: -1px 0 var(--bg-color), 0 1px var(--bg-color),
+    1px 0 var(--bg-color), 0 -1px var(--bg-color);
   opacity: 0.5;
 }
 
-@supports ((-webkit-text-stroke:1px var(--bg-color)) or (text-stroke:1px var(--bg-color))) {
+@supports (
+  (-webkit-text-stroke: 1px var(--bg-color)) or
+    (text-stroke: 1px var(--bg-color))
+) {
   .label__text {
     text-shadow: none;
     -webkit-text-stroke: 1px var(--bg-color);
